--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -67,7 +67,7 @@
         </div>
     </div>
 {% endif %}
-<div class="tw-container tw-mx-auto tw-py-12 tw-px-4">
+<div class="tw-container tw-mx-auto tw-px-4">
     {% if messages %}
         <div class="help tw-p-2 tw-bg-green-200 tw-text-primary tw-border-primary tw-border tw-text-sm tw-m-2">
             {{ page.highlighted }}
