--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -68,6 +68,14 @@
   }
 }
 
+.title-mobile{
+  @apply mt-3;
+  line-height: 1.2rem;
+  @screen md{
+    @apply mt-0;
+    line-height: 1.4rem; 
+  }
+}
 #block-views-block-lo-ultimo-block-1,
 #block-views-block-lo-ultimo-block-2,
 #block-views-block-lo-ultimo-block-3,
@@ -111,7 +119,8 @@
     @apply hidden;
   }
   .views-row{
-    @apply tw-pr-3;
+    @apply tw-pr-4 tw-pl-4;
+    margin: 0 auto;
   }
 }
 
@@ -168,8 +177,27 @@
       font-family: $font-title;
       @apply text-white w-full text-4xl block;
     }
-    .views-row{
-      @apply tw-pr-12;
+  }
+  .player-goles{
+    @apply flex flex-wrap;
+    > .views-row{
+      @apply pr-4 w-2/3;
+    }
+    .views-element-container{
+      @apply w-1/3;
+      >div{
+        @apply flex flex-col h-full justify-between;
+      }
     }
   }
+}
+
+.tw-container{
+  @apply tw-py-6;
+  @screen md {
+    @apply tw-py-12;
+  }
+}
+.owl-item {
+  width: auto;
 }
