--- a/web/themes/custom/tailwindcss/src/sass/_texts.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_texts.scss
@@ -1,7 +1,10 @@
 h2, .title {
   font-family: $font-title;
-  @apply tw-text-4xl mb-8;
+  @apply tw-text-4xl mb-4;
   @apply tw-text-primary tw-leading-none;
+  @screen md {
+    @apply mb-8;
+  }
 }
 
 .title-article {
