--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -2,6 +2,9 @@
   @apply relative;
   .image{
     @apply mb-4;
+    @screen md{
+      @apply mb-0;
+    }
     img:not(.play-icon){
       opacity: 0.7;
       @apply w-full;
@@ -12,8 +15,12 @@
     left: 30px;
     font-family: $font-body;
     line-height: 1.2em;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 0rem;
+    padding-right: 0rem;
+    @screen md{
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
     @apply absolute text-white text-3xl font-semibold;
     a{
       @apply text-white;
@@ -43,7 +50,10 @@
 }
 .opinion.teaser{
   .image{
-    @apply mb-4;
+    @apply mb-0;
+    @screen md{
+      @apply mb-4;
+    }
   }
 }
 #footer-first{
@@ -67,14 +77,11 @@
 }
 .gol-partido.teaser{
   .image {
+    @apply mb-0;
     img {
       @apply w-full;
     }
-    .play-icon{
-      
-      
-    }
-  }
+  } 
 }
 #block-views-block-opinion-block-2,
 #block-views-block-opinion-block-3{
@@ -91,21 +98,6 @@
 #block-views-block-opinion-block-3{
   .views-row{
     @apply w-1/3 pr-4;
-  }
-}
-.player-goles{
-  @apply flex flex-wrap;
-  .views-row{
-    @apply pr-4 w-2/3;
-  }
-  .views-element-container{
-    @apply w-1/3;
-    .views-row{
-      @apply w-full;
-    }
-    >div{
-      @apply flex flex-col h-full justify-between;
-    }
   }
 }
 
@@ -140,7 +132,10 @@
   font-family: $font-title;
   @apply text-center w-full;
   a{
-    @apply inline-block whitespace-no-wrap mb-6 tw-text-xl text-center clear-both bg-secondary text-primary px-6 py-3 w-64 mt-4;
+    @apply inline-block whitespace-no-wrap mb-6 tw-text-xl text-center clear-both bg-secondary text-primary px-6 py-3 w-full mt-4;
+    @screen md{
+      @apply w-64;
+    }
   }
   &.full{
     a{
