--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -46,7 +46,7 @@
  */
 #}
 <div id="header-page" class="tw-bg-primary">
-    <div class="tw-container tw-mx-auto tw-p-4">
+    <div class="tw-container tw-mx-auto">
         <div id="meta-header">
             {{ page.secondary_menu }}
         </div>
