--- a/web/themes/custom/tailwindcss/src/sass/_responsive.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_responsive.scss
@@ -120,6 +120,7 @@
   }
   .views-row{
     @apply tw-pr-4 tw-pl-4;
+    margin: 0 auto;
   }
 }
 
@@ -192,9 +193,17 @@
 }
 
 .tw-container{
-  @apply tw-py-6;
+  @apply tw-pt-6 tw-pb-4;
   @screen md {
-    @apply tw-py-12;
+    @apply tw-pt-12 tw-pb-6;
+  }
+}
+#horizontal-results{
+  .tw-container{
+    @apply tw-py-0; 
+    @screen md {
+      @apply tw-py-0;
+    }
   }
 }
 .owl-item {
