--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -133,7 +133,7 @@
 {% endif %}
 <div>
     {% if page.footer %}
-        <div class="tw-p-4 tw-bg-gray">
+        {#<div class="tw-p-4 tw-bg-gray">
             <div class="tw-container tw-mx-auto tw-p-2">
                 <div class="md:tw-flex tw-justify-between tw-items-center">
                     <div class="title tw-text-5xl">Patrocinadores</div>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>#}
         <div class="tw-bg-primary">
             <div id="footer-first" class="tw-container tw-mx-auto tw-p-2 tw-text-white">
                 {{ page.footer }}
