--- a/web/modules/custom/optawidgets/components/match_menu_block/template.html
+++ b/web/modules/custom/optawidgets/components/match_menu_block/template.html
@@ -107,13 +107,13 @@
                     <opta-widget widget="pass_matrix" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="normal" live="true" orientation="horizontal" show_selects="both" top_combinations="5" show_match_header="true" show_crests="false" show_team_formation="true" show_competition_name="false" show_timecontrols="true" navigation="tabs_more" default_nav="1" one_direction="false" competition_naming="full" show_date="true" date_format="dddd D MMMM YYYY" team_naming="full" player_naming="full" show_tooltips="false" show_logo="false" show_title="true" breakpoints="400, 700" sport="football"></opta-widget>
                 </div>
             </div>
-            <div class="tw-w-1/4 tw-pl-6">
+            <div class="md:tw-w-1/4 md:tw-pl-6">
                 <img src="/sites/default/files/ads/banner2.png" alt="Banner">
             </div>
         </div>
     </div>
     <div v-if="selected_option == 'estadisticas'">
-        <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6 flex">
+        <div v-if="opta_competition>0 && opta_season>0 && opta_match_id>0" class="tw-bg-gray tw-p-6 md:flex">
             <div class="md:tw-w-3/4">
                 <div class="tw-bg-white tw-p-6 tw-mb-6">
                     <opta-widget sport="football" widget="matchstats" :competition="opta_competition" :season="opta_season" :match="opta_match_id" template="team_graphs" live="true" navigation="tabs_more" default_nav="1" show_match_header="true" show_score="true" show_halftime_score="false" show_crests="true" show_team_formation="false" show_competition_name="false" graph_style="full" show_date="false" show_social="false" rounding="1" competition_naming="full" team_naming="full" show_live="true" show_logo="false" show_title="true" title="Estadísticas del partido" breakpoints="400, 700"></opta-widget>
@@ -133,7 +133,7 @@
                                  :team="opta_home_id + ',' + opta_away_id" template="normal" navigation="tabs_more" default_nav="1" show_selects="false" show_crests="false" competition_naming="full" team_naming="full" show_logo="false" show_title="true" breakpoints="400" sport="football"></opta-widget>
                 </div>
             </div>
-            <div class="tw-w-1/4 tw-pl-6">
+            <div class="md:tw-w-1/4 md:tw-pl-6">
                 <img src="/sites/default/files/ads/banner2.png" alt="Banner">
             </div>
         </div>
