section top content

--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -60,6 +60,13 @@
         </div>
     </div>
 </div>
+{% if page.top_content %}
+    <div id="top-content" class="tw-px-4">
+        <div class="tw-container tw-mx-auto tw-px-4">
+            {{ page.top_content }}
+        </div>
+    </div>
+{% endif %}
 {% if page.breadcrumb %}
     <div id="horizontal-results" class="tw-p-4 tw-bg-gray">
         <div class="tw-container tw-mx-auto tw-px-4">
