--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -61,10 +61,8 @@
     </div>
 </div>
 {% if page.top_content %}
-    <div id="top-content" class="tw-px-4">
-        <div class="tw-container tw-mx-auto tw-px-4">
-            {{ page.top_content }}
-        </div>
+    <div id="top-content" class="tw-container tw-mx-auto tw-px-4 tw-py-0">
+        {{ page.top_content }}
     </div>
 {% endif %}
 {% if page.breadcrumb %}
