--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
@@ -1,20 +1,8 @@
 <div class="gol-partido video-player" {{ attributes.addClass(classes) }}>
-    <div class="image" style="background: linear-gradient(0deg, #000 0%, rgba(0,0,0,1) 22%, #999 53%);">
-        {% if node.hasField('field_image_h') %}
-            {{ content.field_image_h }}
-        {% elseif node.hasField('field_image') %}
-            {{ content.field_image }}
-        {% endif %}
-        <div class="tw-absolute tw-top-0 tw-left-0 play-icon tw-w-full tw-h-full tw-flex tw-items-center tw-justify-center">
-            <a href="#" onclick="jQuery('.mediastream-{{ node.id }}').removeClass('tw-hidden');"><img src="/themes/custom/tailwindcss/images/icons/play.png" alt="Play" class="play-icon tw-h-24 tw-w-24 opacity-100"></a>
-        </div>
-        <div class="mediastream mediastream-{{ node.id }} tw-absolute tw-w-full tw-h-full tw-hidden">
-            {% if node.hasField('field_mediastream') %}
-                {{ content.field_mediastream }}
-            {% endif %}
-        </div>
-    </div>
-    <div class="title">
+    {% if node.hasField('field_mediastream') %}
+        {{ content.field_mediastream }}
+    {% endif %}
+    <div class="title title-{{ node.id }}">
         <div class="tw-relative">
             <div class="torneo category left-0">{{ content.field_torneo }}</div>
             <a href="{{ url }}">{{ label }}</a>
