--- a/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--gol-partido--video-player.html.twig
@@ -4,7 +4,7 @@
     {% endif %}
     <div class="title title-{{ node.id }}">
         <div class="tw-relative">
-            <div class="torneo category left-0">{{ content.field_torneo }}</div>
+            <div class="torneo category left-0">{{ content.field_category }}</div>
             <a href="{{ url }}">{{ label }}</a>
         </div>
     </div>
