--- a/web/modules/custom/optafeeds/components/widget_positions/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions/template.html
@@ -5,7 +5,7 @@
         </select>    
     </div>
     <div class="flex flex-no-wrap overflow-x-auto w-full">
-        <div @click="selectOption(option.key)" v-for="option in options" class="py-3 px-6 font-title cursor-pointer table-option" :class="selected_option == option.key?'active':''">{{ option.label }}</div>
+        <div @click="selectOption(option.key)" v-for="option in options" class="flex-1 text-center py-3 px-6 font-title cursor-pointer table-option" :class="selected_option == option.key?'active':''">{{ option.label }}</div>
     </div>
     <div class="flex " style="background-color: #0ef8c3;" v-if="phases && phases.length">
         <div @click="selectPhase(phase.phase.id)" v-for="phase in phases" v-if="phase.teams && Object.keys(phase.teams).length" class="cursor-pointer phase p-2" :class="selected_phase_id == phase.phase.id?'active':''">
