--- a/web/modules/custom/optafeeds/components/widget_positions/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions/template.html
@@ -104,5 +104,5 @@
             </div>    
         </div>
     </div>
-    <div class="more-link full"><a href="/futbol-colombiano">Todas las estadísticas</a></div>
+    <div class="more-link full"><a href="/posiciones">Todas las estadísticas</a></div>
 </div>
