--- a/web/modules/custom/optawidgets/components/opta_general_stats_block/template.html
+++ b/web/modules/custom/optawidgets/components/opta_general_stats_block/template.html
@@ -34,15 +34,7 @@
                 </opta-widget>
             </div>
             <div v-show="selected_option == 'results'">
-                <opta-widget sport="football" widget="fixtures" :competition="competition" :season="season" template="normal" live="true" show_venue="true" match_status="result,live" grouping="date" show_grouping="true"
-                             default_nav="1" start_on_current="true" switch_current="0" sub_grouping="date" show_subgrouping="true" order_by="date_descending" show_crests="true" date_format="dddd D MMMM YYYY" time_format="hh:mm A" month_date_format="MMMM" competition_naming="full"
-                             team_naming="full" pre_match="false" show_live="true" show_logo="false" show_title="false" time_format="hh:mm A" breakpoints="400">
-                    <div>
-                        <opta-widget sport="football" widget="match_summary" template="normal" live="" competition="" season="" match="" show_match_header="false" show_attendance="true" show_cards="true" show_crests="false" show_goals="true" show_goals_combined="false" show_penalties_missed="false"
-                                     show_referee="true" show_subs="true" show_venue="true" show_shootouts="false" player_naming="last_name" player_link="" show_logo="falsee" time_format="hh:mm A" breakpoints="400">
-                        </opta-widget>
-                    </div>
-                </opta-widget>
+                <opta-widget widget="fixtures" :competition="competition" :season="season" template="normal" live="true" show_venue="false" match_status="all" grouping="round" show_grouping="true" navigation="none" default_nav="1" start_on_current="true" sub_grouping="date" show_subgrouping="true" order_by="date_ascending" show_crests="true" date_format="ddd D MMM" time_format="h:mma" month_date_format="MMMM" competition_naming="full" team_naming="brief" :match_link="'/matches/'" pre_match="true" show_live="true" show_logo="false" show_title="false" breakpoints="400" sport="football"><opta-widget sport="football" widget="match_summary" template="normal" live="" competition="" season="" match="" show_match_header="false" show_attendance="true" show_cards="true" show_crests="false" show_goals="true" show_goals_combined="false" show_penalties_missed="false" show_referee="true" show_subs="true" show_venue="true" show_shootouts="false" player_naming="last_name" player_link="" show_logo="true" breakpoints="400"></opta-widget></opta-widget>
             </div>
             <div v-show="selected_option == 'season_standings'">
                 <opta-widget widget="season_standings" :competition="competition" :season="season" template="normal" show_competition_name="false" show_team_list="true" preselected_only="false" show_match_header="false" show_date="true" show_match_details="true" show_crests="false" show_axis_labels="true" show_plot_points="true" plot_curves="false" date_format="dddd D MMMM YYYY" competition_naming="full" team_naming="full" show_logo="false" show_title="false" breakpoints="400, 700" sport="football"></opta-widget>
