--- a/web/themes/custom/tailwindcss/templates/node/node--columna-blog--teaser.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--columna-blog--teaser.html.twig
@@ -4,8 +4,8 @@
             {{ content.field_image }}
         {% endif %}
     </div>
-    <div class="tw-mr-6 published_date">{{ node.getCreatedTime() | format_date('complete_date') }}</div>
-    <div class="tw-text-base mb-0">
+    <div class="tw-mr-6 published_date mb-3">{{ node.getCreatedTime() | format_date('complete_date') }}</div>
+    <div class="tw-text-lg mb-3 tw-leading-6 tw-font-medium">
         <a href="{{ url }}">{{ label }}</a>
     </div>
     <div class="pb-4" {{ author_attributes }}>
