--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -50,7 +50,7 @@
         <div id="meta-header">
             {{ page.secondary_menu }}
         </div>
-        <div class="tw-flex tw-items-center tw-mt-3">
+        <div class="tw-flex tw-items-center">
             <div>
                 <header role="banner">
                     {{ page.header }}
