--- a/web/themes/custom/tailwindcss/templates/node/node--article.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--article.html.twig
@@ -23,7 +23,7 @@
                     <div>{{ content.field_source }}</div>
                 </div>
             {% endif %}
-            <div>Social {{ drupal_block("bettersocialsharingbuttons") }}</div>
+            <div>{{ drupal_block("bettersocialsharingbuttons") }}</div>
 {#            {{ drupal_block("better_social_sharing_buttons_block") }}#}
         </div>
         {% if node.hasField('field_lead') %}
