--- a/web/themes/custom/tailwindcss/templates/node/node--article.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--article.html.twig
@@ -23,8 +23,9 @@
                     <div>{{ content.field_source }}</div>
                 </div>
             {% endif %}
-            <div>{{ drupal_block("bettersocialsharingbuttons") }}</div>
-{#            {{ drupal_block("better_social_sharing_buttons_block") }}#}
+            <div>{{ drupal_block("bettersocialsharingbuttons") }}
+            {{ drupal_block("better_social_sharing_buttons_block") }}
+            </div>
         </div>
         {% if node.hasField('field_lead') %}
             <div class="lead my-2 tw-text-lg italic mb-8">{{ content.field_lead }}</div>
