--- a/web/modules/custom/optawidgets/components/opta_team_widgets_block/template.html
+++ b/web/modules/custom/optawidgets/components/opta_team_widgets_block/template.html
@@ -1,6 +1,6 @@
 <div>
-    <div v-if="competition>0 && season>0 && team>0" class="tw-flex">
-        <div class="flex-1"><opta-widget
+    <div v-if="competition>0 && season>0 && team>0" class="tw-flex opta-widgets">
+        <div class="tw-flex-1"><opta-widget
                 sport="football"
                 widget="team_compare"
                 :competition="competition"
@@ -18,7 +18,7 @@
                 title="Comparar equipos"
                 breakpoints="400">
         </opta-widget></div>
-        <div class="flex-1">
+        <div class="tw-flex-1 tw-pl-6">
             <div class="widget_opta_v3">
                 <opta-widget
                         sport="football"
@@ -42,7 +42,6 @@
                 </opta-widget>
             </div>
         </div>
-        
     </div>
     <div v-else>
         <div style="color:white;background-color: rgba(78,165,255,0.45);padding: 10px;">
