--- a/web/themes/custom/tailwindcss/templates/layout/page.html.twig
+++ b/web/themes/custom/tailwindcss/templates/layout/page.html.twig
@@ -171,7 +171,7 @@
                     Copyright© 2020, Bogotá - Colombia. Todos los derechos reservados.  Está prohibida la reproducción total o parcial de la página
                 </div>
                 <div class="tw-text-secondary tw-pb-4 enlaces">
-                    <a class="footer" href="/">Quiénes somos</a>
+                    <a class="footer" href="/quienes-somos">Quiénes somos</a>
                     <a class="footer" href="/terminos-condiciones">Términos y Condiciones</a>
                     <a class="footer" href="https://winsports.zendesk.com/hc/es/requests/new" target="_blank">Soporte Técnico Win Sports Online</a> 
                     <a class="footer" href="/politica-de-cookies">Política de cookies</a>
