--- a/web/modules/custom/optafeeds/components/widget_positions_colombia/template.html
+++ b/web/modules/custom/optafeeds/components/widget_positions_colombia/template.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div v-else-if="phases && Object.keys(phases).length" class="flex flex-no-wrap overflow-x-auto w-full" style="background-color: #0ef8c3;">
-        <div @click="selectPhase(phase.phase.id)" v-for="phase in phases" v-if="phase.teams && Object.keys(phase.teams).length" class="cursor-pointer phase p-2" :class="selected_phase_id == phase.phase.id?'active':''">
+        <div @click="selectPhase(phase.phase.id)" v-for="phase in phases" v-if="phase.teams && Object.keys(phase.teams).length" class="whitespace-no-wrap cursor-pointer phase p-2" :class="selected_phase_id == phase.phase.id?'active':''">
             {{ phaseName(phase.phase.type, phase.phase.number) }}
         </div>
     </div>
