--- a/web/themes/custom/tailwindcss/src/sass/_views.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_views.scss
@@ -669,3 +669,9 @@ nav#block-envivo {
 div#block-customadsblock {
     margin-bottom: 2rem;
 }
+
+.img-jugador{
+  img {
+    @apply rounded-full m-auto;
+  }
+}
