--- a/web/themes/custom/tailwindcss/src/sass/_texts.scss
+++ b/web/themes/custom/tailwindcss/src/sass/_texts.scss
@@ -21,7 +21,14 @@ h2.title-news {
     @apply tw-text-5xl mb-4; 
   }
 }
-
+div#block-titulodelapagina {
+  font-family: $font-title; 
+  @apply tw-text-4xl mb-4;
+  @apply tw-text-primary tw-leading-none;
+  @screen md {
+    @apply mb-8;
+  }
+}
 
 h2 {
   @apply uppercase;
