--- a/web/themes/custom/tailwindcss/templates/node/node--columna-blog.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/node--columna-blog.html.twig
@@ -14,7 +14,7 @@
         {% if node.hasField('field_category') %}
             <div class="category">{{ content.field_category }}</div>
         {% endif %}
-        <h2 class="title">{{ label }}</h2>
+        <h2 class="title-news">{{ label }}</h2>
         <div class="tw-flex tw-items-center tw-text-primary tw-text-sm tw-my-4">
             <div class="tw-mr-6 published_date">{{ node.getCreatedTime() | format_date('complete_date') }}</div>
             {% if node.hasField('field_source') %}
@@ -23,24 +23,28 @@
                     <div>{{ content.field_source }}</div>
                 </div>
             {% endif %}
+            <div>{{ drupal_block("better_social_sharing_buttons_block") }}</div>
         </div>
         {% if node.hasField('field_lead') %}
-            <div class="lead my-2">{{ content.field_lead }}</div>
+            <div class="lead my-2 tw-text-lg italic mb-8">{{ content.field_lead }}</div>
+        {% endif %}
+        {% if node.hasField('field_mediastream') %}
+            {{ content.field_mediastream }}
         {% endif %}
         {% if node.hasField('field_image_h') %}
             <div class="tw-my-4">{{ content.field_image_h }}</div>
-            <div class="tw-text-primary tw-text-sm tw-mb-2">{{ node.field_image_h.title }}</div>
+            <div class="tw-text-gray-650 tw-text-sm tw-mb-4">{{ node.field_image_h.title }}</div>
         {% elseif node.hasField('field_image') %}
             <div class="tw-mt-4 tw-mb-2">{{ content.field_image }}</div>
             <div class="tw-text-primary tw-text-sm tw-mb-2">{{ node.field_image.title }}</div>
         {% endif %}
-        <div class="body">{{ content.body }}</div>
+        <div class="body tw-text-xl">{{ content.body }}</div>
         <div class="tags tw-flex tw-text-sm tw-items-center">
             <div class="tw-whitespace-no-wrap tw-p-2 uppercase label">Tags relacionados</div>
-            <div>{{  content.field_tags }}</div>
+            <div>{{ content.field_tags }}</div>
         </div>
         <div class="comments">
             <div class="fb-comments" data-href="https://www.winsports.co{{ url }}" data-width="100%" data-numposts="5"></div>
         </div>
-
+    </div>
 </article>
