--- a/web/themes/custom/tailwindcss/templates/node/user.html.twig
+++ b/web/themes/custom/tailwindcss/templates/node/user.html.twig
@@ -1,7 +1,7 @@
 <div class="user compact" {{ attributes }}>
     <div class="tw-flex flex text-sm">
-        <div class="image self-center tw-w-3/12">{{ content.field_image }}</div>
-        <div class="text-sm tw-w-9/12">
+        <div class="image self-center tw-mr-4 md:tw-mr-0 md:tw-w-3/12">{{ content.field_image }}</div>
+        <div class="text-sm md:tw-w-9/12">
             <div class="nombres self-center lead">{{ content.field_nombres }}</div>
             <div class="twitter self-center">{{ content.field_twitter }}</div>   
         </div>
