--- a/web/modules/custom/youtube_formatter/templates/youtube.html.twig
+++ b/web/modules/custom/youtube_formatter/templates/youtube.html.twig
@@ -1,5 +1,5 @@
 <div id="youtube-player-{{ url }}" class="youtube-player tw-bg-gray-650">
     <div id="video-{{ url }}">
-        <iframe width="560" height="315" src="{{ url }}" frameborder="0" allowfullscreen></iframe>
+        <iframe width="100%" height="500" src="{{ url }}" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
